# Sleeping-Healthy

./: .gitignore  QUICK_START.md  README.md
ESP32-CSI-Tool/_components/: csi_component.h  dht_component.c  dht_component.h  mqtt_component.c  mqtt_component.h
ESP32-CSI-Tool/active_ap/main/: CMakeLists.txt  main.cc  main.py
ESP32-CSI-Tool/active_sta/main/: CMakeLists.txt  main.cc
ESP32-CSI-Tool/wifi_csi_sender/: README.md
ESP32-CSI-Tool/wifi_csi_sender/main/: main.cc
sleep-monitor-app/: app.json  eas.json  package-lock.json  package.json
sleep-monitor-app/src/: App.js
sleep-monitor-app/src/api/: auth.js  config.js  dashboard.js  environment.js  respiration.js  sleepRecords.js
sleep-monitor-app/src/pages/: Dashboard.js  Environment.js  Login.js  Register.js  Respiration.js  Settings.js  SleepRecords.js
sleep-monitor-backend/: README.md  apnea_detector.py  app.py  csi_data.py  csi_pipeline.py  mqtt_processor.py  requirements.txt  serial_bridge.py  serial_monitor.py  sleep_classifier.py  sleep_monitor_start.bat  start_csi_bridge.bat  test_api.py  test_serial.py
sleep-monitor-frontend/: index.html  package-lock.json  package.json
sleep-monitor-frontend/src/: App.jsx  index.css
sleep-monitor-frontend/src/api/: auth.js  config.js  dashboard.js  devices.js  environment.js  respiration.js  sleepRecords.js
sleep-monitor-frontend/src/layouts/: MainLayout.jsx
sleep-monitor-frontend/src/pages/: Dashboard.css  Dashboard.jsx  Environment.css  Environment.jsx  HeartRate.css  HeartRate.jsx  Login.css  Login.jsx  Register.css  Register.jsx  Respiration.css  (+5 more)
